feat: data handling and variables

--- a/aula06/ex004.html
+++ b/aula06/ex004.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercício 1</title>
+    <title>Exercício 4</title>
     <style>
         body {
             background-color: #f69cf1;
             color: #fff;}
         h1{
             font-size: 50px;
-            text-align: center;
+            text-align: center; 
             color: #ab32eb;
         }
         p{
@@ -31,9 +31,9 @@
     <p>Me livrei da maldição!</p>
     <img src="https://media.giphy.com/media/3o7aD2X9Y5W5XxUdqo/giphy.gif" alt="Gif do Harry Potter">
     <script>
-       window.alert("Hello World!"); 
-       window.confirm("Me livrei da maldição!");
-       window.prompt("Digite seu nome: ");
+       var name = window.prompt("Digite seu nome: ");
+       var age = Number(window.prompt("Digite sua idade: "));
+         window.alert(`Olá, ${name}! Você tem ${age} anos.`);
     </script>
 </body>
 </html>
