--- a/class06/ex003.html
+++ b/class06/ex003.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercício 1</title>
+    <title>Ex 3</title>
     <style>
         body {
             background-color: #f69cf1;
             color: #fff;}
         h1{
             font-size: 50px;
-            text-align: center;
+            text-align: center; 
             color: #ab32eb;
         }
         p{
@@ -28,12 +28,13 @@
 </head>
 <body>
     <h1>Hello World!</h1>
-    <p>Me livrei da maldição!</p>
+    <p>I'm free!</p>
     <img src="https://media.giphy.com/media/3o7aD2X9Y5W5XxUdqo/giphy.gif" alt="Gif do Harry Potter">
     <script>
-       window.alert("Hello World!"); 
-       window.confirm("Me livrei da maldição!");
-       window.prompt("Digite seu nome: ");
+       var n1 = Number(window.prompt("Type a number: "));
+        var n2 = Number(window.prompt("Type another number: "));
+         var soma = n1 + n2;
+        window.alert("The sum of the two numbers is: " + soma);
     </script>
 </body>
 </html>
