--- a/class06/ex004.html
+++ b/class06/ex004.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercício 4</title>
+    <title>Ex 4</title>
     <style>
         body {
             background-color: #f69cf1;
@@ -28,12 +28,12 @@
 </head>
 <body>
     <h1>Hello World!</h1>
-    <p>Me livrei da maldição!</p>
+    <p>I'm free!</p>
     <img src="https://media.giphy.com/media/3o7aD2X9Y5W5XxUdqo/giphy.gif" alt="Gif do Harry Potter">
     <script>
-       var name = window.prompt("Digite seu nome: ");
-       var age = Number(window.prompt("Digite sua idade: "));
-         window.alert(`Olá, ${name}! Você tem ${age} anos.`);
+       var name = window.prompt("Type your name: ");
+       var age = Number(window.prompt("Type your age: "));
+         window.alert(`Hello, ${name}! You have ${age} years.`);
     </script>
 </body>
 </html>
