--- a/class04/ex001.html
+++ b/class04/ex001.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercício 2</title>
+    <title>Ex 1</title>
     <style>
         body {
             background-color: #f69cf1;
             color: #fff;}
         h1{
             font-size: 50px;
-            text-align: center; 
+            text-align: center;
             color: #ab32eb;
         }
         p{
@@ -28,11 +28,12 @@
 </head>
 <body>
     <h1>Hello World!</h1>
-    <p>Me livrei da maldição!</p>
-    <img src="https://media.giphy.com/media/3o7aD2X9Y5W5XxUdqo/giphy.gif" alt="Gif do Harry Potter">
+    <p>I'm free!</p>
+    <img src="https://media.giphy.com/media/3o7aD2X9Y5W5XxUdqo/giphy.gif" alt="Harry Potter Gif">
     <script>
-       var name = window.prompt("Digite seu nome: ");
-       window.alert("Olá, " + name + "!");
+       window.alert("Hello World!"); 
+       window.confirm("I'm free!");
+       window.prompt("Type your name: ");
     </script>
 </body>
 </html>
