--- a/class06/ex002.html
+++ b/class06/ex002.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercício 3</title>
+    <title>Ex 2</title>
     <style>
         body {
             background-color: #f69cf1;
@@ -28,13 +28,11 @@
 </head>
 <body>
     <h1>Hello World!</h1>
-    <p>Me livrei da maldição!</p>
+    <p>I'm free!</p>
     <img src="https://media.giphy.com/media/3o7aD2X9Y5W5XxUdqo/giphy.gif" alt="Gif do Harry Potter">
     <script>
-       var n1 = Number(window.prompt("Digite um número: "));
-        var n2 = Number(window.prompt("Digite outro número: "));
-         var soma = n1 + n2;
-        window.alert("A soma dos números é: " + soma);
+       var name = window.prompt("Type your name: ");
+       window.alert("Hello, " + name + "!");
     </script>
 </body>
 </html>
